--- a/ch02-subprobs.tex
+++ b/ch02-subprobs.tex
@@ -17,6 +17,15 @@ to handle this structure.
 In Section~\ref{sec:subprobs:approach},
 we descrive our approach.
 
+\section{Scope}
+
+Not handling feedback to high-level symbolic planner
+(e.g. what failed and why?)
+like hybrid planners do
+(e.g. Plaku \& Kavraki, DARRT, HPN, etc).
+
+Though our approach is in part complementary?
+
 \section{Structure of Manipulaiton Tasks}
 \label{sec:subprobs:structure}
 
@@ -117,6 +126,9 @@ From DRC Trials: Fixtures as a Common Language!
 How have others solved manipulation problems with sub-problem
 structure?
 
+Also, talk about planning in the now stuff
+when discussing the scope of the thesis.
+
 \subsection{DRC Trials Approach}
 
 Talk a lot about the DRC approach.
@@ -164,6 +176,11 @@ but we'll talk later about more complex meta-planning
 approaches
 in Chapter~\ref{chap:task-planning}
 when we put it all together.
+
+The bulk of the thesis ignores
+interleaved planning execution,
+but Chapter~\ref{chap:task-planning}
+talks about it.
 
 \subsection{When Does Our Approach Work?}
 
