--- a/ch03-e8.tex
+++ b/ch03-e8.tex
@@ -784,7 +784,7 @@ E$^8$ & 5 & 5 & 5 \\
 \end{tabular}
 \end{center}
 
-I hope to show that the Greedy PRM is competitive with RRT-Connect
+I hope to show that the E$^8$-PRM is competitive with RRT-Connect
 in terms of planning effort required to find a feasible path.
 
 \begin{figure}
@@ -801,7 +801,7 @@ in terms of planning effort required to find a feasible path.
    \quad
    \begin{subfigure}[b]{0.3\textwidth}
       \includegraphics[width=\textwidth]{figs/compare-2d-rrtc1-checkmask-l00-s1.png}
-      \caption{Greedy PRM, $\lambda=0$}
+      \caption{E$^8$-PRM, $\lambda=0$}
    \end{subfigure}%
    \vspace{0.05in}
    \begin{subfigure}[b]{0.3\textwidth}
@@ -816,11 +816,11 @@ in terms of planning effort required to find a feasible path.
    \quad
    \begin{subfigure}[b]{0.3\textwidth}
       \includegraphics[width=\textwidth]{figs/compare-2d-rrtc1-checkmask-l10-s1.png}
-      \caption{Greedy PRM, $\lambda=1$}
+      \caption{E$^8$-PRM, $\lambda=1$}
    \end{subfigure}%
    \caption{Example runs with different planners,
       with the same sequence of samples.
-      Note that Greedy PRM $\lambda=0$ is equivalent to LazyPRM.
+      Note that E$^8$-PRM with $\lambda=0$ is equivalent to LazyPRM.
       Red dots show collision checks.}
    \label{fig:compare-2d-rrtc1-vis}
 \end{figure}
