--- a/ch05-multiset.tex
+++ b/ch05-multiset.tex
@@ -1088,6 +1088,16 @@ Check right arm against gian left side box, etc.
 The Handey \cite{lozanoperez1987handey} robot
 assumed a box that contained the wrist links at a range of DOF values.
 
+\subsection{Dual-Arm Stuff}
+
+This is very similar to dimensionality reduction.
+
+Loose coupling between arms.
+
+Separate roadmaps for each arm.
+
+Investigate this multi-set structure.
+
 \section{Other Stuff}
 
 Potential research question: learn cost model over time.
