--- a/ch06-multisetprm.tex
+++ b/ch06-multisetprm.tex
@@ -1,10 +1,10 @@
-\chapter{Applying Greedy PRM to Multi-Set: the Multi-Set Greedy PRM}
+\chapter{Multi-Set as a Planning Cost Model for Roadmap Planners}
 \label{chap:multi-set-prm}
 
 This content is currently in submission \cite{dellin2015multiset}.
 
 \begin{itemize}
-\item GreedyPRM and multi-set are complementary
+\item E$^8$-PRM and multi-set are complementary
 \item Apply greeydprm to multi-set problem
 \item one planner that learns, can answer arbitrary queries
    in multiple related spaces faster and faster
