--- a/ch08-taskplanning.tex
+++ b/ch08-taskplanning.tex
@@ -13,6 +13,16 @@ Proteus Reasons Over Task Effort Using Sampling.
 To be clear, no symbolic planning here --
 complementary!
 
+\section{Interleaved Planning and Execution}
+\label{sec:interleaved}
+
+We talk about how the approach in this thesis is
+amenable to interleaved planning and execution.
+Proteus can just keep updating $q_{\mbox{\scriptsize init}}$.
+
+``The \textsc{Proteus} task planning server
+will handle moving starts.''
+
 \section{Future Work}
 
 \subsection{Learning Good Intermediate Roots}
