--- a/figs/intro-cost-chimp.tex
+++ b/figs/intro-cost-chimp.tex
@@ -7,10 +7,10 @@
    \includegraphics[height=2in]{figs/chimp-debris-cost.jpg}
 };
 \node[black,fill=white,fill opacity=0.5,text opacity=1]
-   (planlab) at (1.0,2.15) {Planning Cost};
+   (planlab) at (1.0,2.15) {Planning Effort};
 \draw[->,thick] (planlab.south) -- (0.6,0.6);
 \node[black,fill=white,fill opacity=0.5,text opacity=1]
-   (execlab) at (-0.9,-2.2) {Execution Cost};
+   (execlab) at (-0.9,-2.2) {Execution Effort};
 \draw[->,thick] (execlab.north) -- (-1.1,-0.8);
 \end{tikzpicture}%
 \end{document}
