--- a/fast-manip.tex
+++ b/fast-manip.tex
@@ -2,6 +2,8 @@
 
 \usepackage{standalone}
 
+\usepackage{calc}
+
 \usepackage[bookmarks=true]{hyperref}
 
 % symbols
@@ -41,7 +43,7 @@
 
 % include \paragraph as numbered
 \setcounter{secnumdepth}{3}
-\setcounter{tocdepth}{2} % 3
+\setcounter{tocdepth}{1} % 3
 
 %\def\hidenotes{}
 % list of commenters
@@ -154,8 +156,9 @@ and provide an open-source implementation of our planner.
 \include{ch06-multisetprm}
 \include{ch07-cmr}
 \include{ch08-taskplanning}
-\include{ch09-conclusion}
-\include{ch10-proposed}
+\include{ch09-experiments}
+\include{ch10-conclusion}
+\include{ch11-proposed}
 
 {\small
 \bibliographystyle{abbrv}
